deployment-with-resources.yaml
#deployment-with-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: stefanprodan/podinfo:6.1.4
        command:
        - ./podinfo
        - --level=debug
        - --port=9898
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
