pod-with-cm-v2.yaml

apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-cm-1
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14
      volumeMounts:
      - name: contents
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: contents
      configMap:
        name: web-contents
        items:
        - key: "index1.html"
          path: "index.html"

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-cm-2
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14
      volumeMounts:
      - name: contents
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: contents
      configMap:
        name: web-contents
        items:
        - key: "index2.html"
          path: "index.html"
