pod-with-cm.yaml

apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-cm
spec:
  containers:
    - name: nginx
      image: nginx:1.14
      volumeMounts:
      - name: contents
        mountPath: "/usr/share/nginx/html"
        readOnly: true
  volumes:
    - name: contents
      configMap:
        name: web-contents
        items:
        - key: "index.html"
          path: "index.html"
