service-clusterip.yaml
#service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 9898
